--- a/assets/projects/01-project/index.html
+++ b/assets/projects/01-project/index.html
@@ -9,7 +9,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Aoboshi+One&family=Baloo+2:wght@400..800&display=swap" rel="stylesheet">
     </head>
 
-    <body class="project__1">
+    <body class="project-1">
 
         <header class="hero-section">
             <h1 class="hero-title">Libro forestal</h1>
