--- a/assets/projects/01-project/index.html
+++ b/assets/projects/01-project/index.html
@@ -75,7 +75,7 @@
 
             <section class="image-gallery">
                 <div class="image-item">
-                    <img src="img/cosa1.png" alt="foto avance">
+                    <img src="../01-project/img/cosa1.png"" alt="foto avance">
                 </div>
                 <div class="image-item">
                     <img src="img/cosa2.png" alt="avance">
